[package]
name = "rust-wasmcloud-bank-actor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wapc-guest = "0.4.0"
wasmcloud-actor-keyvalue = { version = "0.2.1", features = ["guest"] }
wasmcloud-actor-core = { version = "0.2.2", features = ["guest"] }
wasmcloud-actor-http-server = { version = "0.1.1", features = ["guest"]}
serde_json = "1.0.59"
serde = { version = "1.0.125", features = ["derive"]}

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true