[package]
name = "rust-wasm32-importer"
version = "0.1.0"
authors = ["Tim Langford <tim.langford@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"

[dependencies]
