[package]
name = "rust-wasm32-checkers"
version = "0.1.0"

# USe the old 2015 version of Rust.
#
# edition = "2018"
edition = "2015"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mut_static = "5.0.0"
lazy_static = "1.0.2"
